# harmonix

./: README.md  harmonix.cabal  haskell-web-test.cabal  stack.yaml
app/: App.hs  ConsoleRender.hs  Main.hs
src/: Console.hs  Music.hs  Util.hs
