name:                harmonix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stusherwin/harmonix#readme
license:             BSD3
license-file:        LICENSE
author:              Stu Sherwin
maintainer:          stu.sherwin@gmail.com
copyright:           2017 Stu Sherwin
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util, Music, Console
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
  default-language:    Haskell2010

executable harmonix-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       App, ConsoleRender
  build-depends:       base
                     , harmonix
                     , ansi-terminal
  default-language:    Haskell2010

test-suite harmonix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , harmonix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stusherwin/harmonix
